[CUST-2645] Fixed bad import and compilation error around Lists